# SysDesign-HW-1

./: .env.example  .gitignore  ADR.md  README.md  alembic.ini  alembic_billing.ini  alembic_rental.ini  docker-compose.dwh.yml  docker-compose.yaml  docker-compose.yml  makefile  pyproject.toml  pytest.ini  readme.MD
.github/workflows/: .env.ci  ci.yml
diagrams/: 01-architecture-overview.md  02-create-rental-flow.md  03-billing-process.md  04-database-schema.md  05-reliability-patterns.md  06-scalability.md  README.md
docks/: ADR.md
docs/: ADR.md  DWH_DEFENSE.md  QUICKSTART_DWH.md  README_DWH.md  dwh_architecture_mermaid.md  dwh_tables.md  er_dds_mermaid.md  grafana_dashboard_powerbank.json
docs/sre/: 01_reliability_basics.md  02_cap_consensus.md  03_databases_basics.md  04_replication.md  05_partitioning.md  06_microservices_transactions.md  07_load_design.md  08_monitoring_metrics.md  09_logging_tracing.md  10_alerting_detection.md  11_design_principles.md  12_resilience_patterns.md  13_caching.md  14_message_queues.md  README.md  (+1 more)
external-stubs/: Dockerfile  fastapi_stubs.py  model.py  pyproject.toml  requirements.txt
migrations/: env.py
scripts/: check_dwh_data.sh  create_test_data.sh  dump_dwh.sh  integration_cache_and_configs.sh  integration_full.sh  lib_http.sh  restore_dwh.sh  run_suite.sh  setup_dwh.sh  smoke.sh  test_billing.sh  test_billing_2.sh  test_billing_buyout_and_debt.sh  test_billing_buyout_paid_only.sh  test_billing_mixed_paid_and_debt.sh  test_billing_periodic.sh  test_buyout_auto_finish.sh  test_idempotency_and_errors.sh  test_money_flows.sh  test_offer_freshness.sh  test_tariff_cache.sh
services/billing-worker/: Dockerfile  README.md  alembic.ini  clients.py  main.py  models.py  pyproject.toml  requirements.txt
services/billing-worker/billing_worker/: main.py  schemas.py
services/billing-worker/billing_worker/clients/: external.py
services/billing-worker/billing_worker/config/: logging.py  settings.py
services/billing-worker/billing_worker/core/: circuit_breaker.py
services/billing-worker/billing_worker/db/: database.py  models.py
services/billing-worker/billing_worker/db/repositories/: debt.py  payment.py  rental.py
services/billing-worker/billing_worker/monitoring/: metrics.py
services/billing-worker/billing_worker/services/: billing.py  debt.py  payment.py
services/billing-worker/tests/: test_debt_retry.py
services/rental-core/: Dockerfile  README.md  pyproject.toml  requirements.txt
services/rental-core/app/: clients.py  config.py  config_cache.py  db.py  main.py  model.py  models.py  offer_store.py  schemas.py  tariff_cache.py
services/rental-core/rental_core/: main.py  schemas.py
services/rental-core/rental_core/api/: dependencies.py
services/rental-core/rental_core/api/v1/: health.py  rentals.py
services/rental-core/rental_core/clients/: external.py
services/rental-core/rental_core/config/: settings.py
services/rental-core/rental_core/core/: circuit_breaker.py  exceptions.py  utils.py
services/rental-core/rental_core/db/: database.py  models.py
services/rental-core/rental_core/db/repositories/: debt.py  idempotency.py  quote.py  rental.py
services/rental-core/rental_core/monitoring/: metrics.py
services/rental-core/rental_core/services/: payment.py  quote.py  rental.py
services/rental-core/tests/: test_quotes_and_debt.py
shared/: pyproject.toml  setup.py
tests/: README.md  ReadMe.md  conftest.py  requirements.txt  test_api_flows.py  test_billing_flows.py  test_circuit_breaker.py  test_debt.py  test_health.py  test_quotes.py  test_rental_order_safety.py  test_rentals.py  test_shared_repositories.py
ui/: README.md  index.html
(+43 files in other folders)
