[project]
name = "billing-worker"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "SQLAlchemy~=2.0.32",
    "psycopg2-binary~=2.9.9",
    "python-dotenv~=1.2.1",
    "requests~=2.32.4",
    "fastapi~=0.121.3",
    "loguru>=0.7.3",
    "pydantic-settings>=2.12.0",
    "alembic~=1.13.0",
    "pybreaker~=1.0.2",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv]
package = true

[tool.uv.sources]
shared = { path = "../../shared", editable = true }
