[project]
name = "rental-core"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi~=0.121.3",
    "uvicorn[standard]~=0.38.0",
    "pydantic~=2.12.4",
    "pydantic-settings>=2.12.0",
    "requests~=2.32.4",
    "cachetools~=6.2.2",
    "python-dotenv~=1.2.1",
    "SQLAlchemy~=2.0.32",
    "psycopg2-binary~=2.9.9",
    "loguru>=0.7.3",
    "pybreaker~=1.0.2",
    "prometheus-client>=0.19.0",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "shared",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv]
package = true

[tool.uv.sources]
shared = { path = "../../shared" }
